# sel4_profiler

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  USE.md  client.c  dummy_prog.c  dummy_prog2.c  log  printf.c  profiler.c  profiler.rs  profiler.system  profiler_maaxboard.system  profiler_oc4.system  rust-toolchain.toml  serial.c  serial_server.c  timer.c
ci/: acquire_sdk.sh  example.sh  test_toperf.sh
echo_server/: lwip.c  tcp_echo_socket.c
example/: Makefile  README.md  config_structs.py  dummy_prog.c  dummy_prog1.c  dummy_prog2.c  dummy_prog3.c  dummy_prog4.c  meta.py  prof_example.mk  sdfgen_helper.py
include/: client.h  config.h  echo.h  ethernet_config.h  lwipopts.h  perf.h  pmu_access.h  profiler.h  profiler_config.h  profiler_printf.h  serial.h  serial_config.h  serial_server.h  snapshot.h  socket.h  timer.h  util.h
libvspace/: vspace.c
nanopb/: pmu_sample.pb.c  pmu_sample.pb.h
netconn/: README.md  netconn.py  samples.json
network_host/: README.md  pmu_sample_pb2.py  seL4_linux_host.py
profiler/: client.c  lwip.c  netconn_socket.c  profiler.c  profiler.mk  profiler_main.c  profiler_temp.mk  profiler_thread.c  serial_server.c
profiler_client/: client.c  lwip.c  netconn_socket.c  prof_lwip.c  profiler_client.mk
protobuf/: nanopb.proto  nanopb_pb2.py  pmu_sample.pb.c  pmu_sample.proto  (+1 more)
toperf/: .gitignore  Cargo.toml  README.md
toperf/example/: README.md  samples.json
toperf/src/: lib.rs  main.rs  sample.rs  sample_parser.rs
toperf/src/perf/: attributes.rs  events.rs  features.rs  file_section.rs  header.rs  mod.rs
(+42 files in other folders)
