[package]
name = "toperf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.4.0"
serde_json = "1.0.107"
serde_with = "3.6.0"
